Implement putMapping operation for incremental index mapping updates inside search add-on #3218