@@ -27,6 +27,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import jakarta.annotation.PostConstruct;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -53,7 +54,8 @@ public class StartupIndexSynchronizer {
     protected void postConstruct() {
         try {
             log.info("Start initial index synchronization");
-            Map<IndexConfiguration, IndexSynchronizationStatus> indexSynchronizationResults = indexManager.synchronizeIndexSchemas();
+            Map<IndexConfiguration, IndexSynchronizationStatus> indexSynchronizationResults
+                    = indexManager.synchronizeIndexSchemas();
 
             List<IndexConfiguration> enqueueAllCandidates = new ArrayList<>();
             List<IndexConfiguration> available = new ArrayList<>();
@@ -73,22 +75,27 @@ public class StartupIndexSynchronizer {
                     case MISSING:
                         unavailable.add(config);
                         break;
+                    case UPDATED:
                     default:
                         available.add(config);
                 }
             });
 
+            //TODO duplicating marking indexes that already performed in ESIndexManager
             available.forEach(config -> indexStateRegistry.markIndexAsAvailable(config.getEntityName()));
             unavailable.forEach(config -> indexStateRegistry.markIndexAsUnavailable(config.getEntityName()));
 
             if (searchProperties.isEnqueueIndexAllOnStartupIndexRecreationEnabled()) {
                 List<IndexConfiguration> indexConfigurationsToEnqueueAll = enqueueAllCandidates.stream()
                         .filter(config -> {
-                            List<String> entitiesAllowedToEnqueue = searchProperties.getEnqueueIndexAllOnStartupIndexRecreationEntities();
-                            return entitiesAllowedToEnqueue.isEmpty() || entitiesAllowedToEnqueue.contains(config.getEntityName());
+                            List<String> entitiesAllowedToEnqueue
+                                    = searchProperties.getEnqueueIndexAllOnStartupIndexRecreationEntities();
+                            return entitiesAllowedToEnqueue.isEmpty()
+                                    || entitiesAllowedToEnqueue.contains(config.getEntityName());
                         })
-                        .collect(Collectors.toList());
-                indexConfigurationsToEnqueueAll.forEach(config -> indexingQueueManager.initAsyncEnqueueIndexAll(config.getEntityName()));
+                        .toList();
+                indexConfigurationsToEnqueueAll.forEach(
+                        config -> indexingQueueManager.initAsyncEnqueueIndexAll(config.getEntityName()));
             }
             log.info("Finish initial index synchronization");
         } catch (Exception e) {
